# pico-llm

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yaml  pre-commit.yaml  source.yaml
logs/: ab12057_pico_llm_1622798.out  ab12057_picollm_1646184.err  ab12057_picollm_1646184.out
results/: sampled_sentences.json
src/: pico-llm.py  pico-llm.tmp.py  pico_llm.py  sample.py
src/dataset/: __init__.py  fixed_sequence_dataset.py  loader.py  mixed_sequence_dataset.py
src/models/: __init__.py  kgram_mlp.py  lstm.py  transformer.py
src/models/transformer/: __init__.py  blocks.py  model.py  position_embeddings.py
src/pico_llm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sh/: pico_llm.sh
src/slurm/: pico_llm.slurm
src/trainer/: __init__.py  base.py  train.py
src/training/: __init__.py  base.py  train.py
src/utils/: __init__.py  generation.py  metrics.py  parser.py
